--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Enkla recept på pannkakor</title>
   </head>
   <body>
-    <div class="main">
+    <div class="pageWrapper">
       <div class="container">
         <header class="headerImageContainer">
           <img src="images/pancake1.jpg" alt="pannkakor med bär" class="headerImage" />
