--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="sv" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Enkelt och traditionellt recept på pannkakor med ingredienser och tillagningsinstruktioner."
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,64 +14,70 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <title>Enkla recept på pannkakor</title>
+    <title>Enkelt recept på pannkakor</title>
   </head>
   <body>
-    <div class="pageWrapper">
-      <div class="container">
-        <header class="headerImageContainer">
-          <img src="images/pancake1.jpg" alt="pannkakor med bär" class="headerImage" />
-        </header>
-        <main class="recipeContainer">
-          <h1 class="recipeTitle">Enkla recept på pannkakor</h1>
-          <p class="recipeDescription">
+    <main class="main-content">
+      <div class="recipe-cover" aria-hidden="true"></div>
+      <article class="recipe-container">
+        <header class="recipe-header">
+          <h1 class="recipe-title">Enkelt recept på pannkakor</h1>
+          <p class="recipe-description">
             Gör traditionella tunna pannkakor med detta enkla och goda
             pannkaksrecept.
           </p>
-          <section class="recipeIngredients">
-            <h2 class="recipeSubtitle">
-              Ingredienser <span class="recipePortions">(4 port)</span>
-            </h2>
-            <ul class="recipeIngredientsList">
-              <li>2 1/2 dl vetemjöl</li>
-              <li>1/2 tsk salt</li>
-              <li>6 dl mjölk</li>
-              <li>3 ägg</li>
-              <li>smör (till stekning)</li>
-              <li>sylt, bär eller frukt till servering</li>
-            </ul>
-          </section>
-          <section class="recipeSteps">
-            <h2 class="recipeSubtitle">Så här gör du</h2>
-            <ol class="recipeStepsList">
-              <li>Blanda mjöl och salt i en bunke.</li>
-              <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-              <li>Vispa i resten av mjölken och äggen.</li>
-              <li>Låt smeten vila ca 10 minuter.</li>
-              <li>
-                Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek-
-                eller pannkakspanna.
-              </li>
-              <li>Servera med sylt, bär eller frukt</li>
-            </ol>
-          </section>
-          <section class="recipeImages">
-            <h2 class="recipeSubtitle">Serveringsförslag</h2>
-            <div class="recipeImagesContainer">
+        </header>
+
+        <section class="recipe-section">
+          <h2 class="recipe-subtitle">
+            Ingredienser
+            <span class="recipe-portions" aria-label="Portioner">(4 port)</span>
+          </h2>
+          <ul class="recipe-list">
+            <li>2 1/2 dl vetemjöl</li>
+            <li>1/2 tsk salt</li>
+            <li>6 dl mjölk</li>
+            <li>3 ägg</li>
+            <li>smör (till stekning)</li>
+            <li>sylt, bär eller frukt till servering</li>
+          </ul>
+        </section>
+
+        <section class="recipe-section">
+          <h2 class="recipe-subtitle">Så här gör du</h2>
+          <ol class="recipe-list">
+            <li>Blanda mjöl och salt i en bunke.</li>
+            <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+            <li>Vispa i resten av mjölken och äggen.</li>
+            <li>Låt smeten vila ca 10 minuter.</li>
+            <li>
+              Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek-
+              eller pannkakspanna.
+            </li>
+            <li>Servera med sylt, bär eller frukt</li>
+          </ol>
+        </section>
+
+        <section class="recipe-section">
+          <h2 class="recipe-subtitle">Serveringsförslag</h2>
+          <div class="recipe-images-container">
+            <figure class="recipe-image-wrapper">
               <img
                 src="images/pancake2.jpg"
-                alt="tallrik med pannkakor"
-                class="recipeImage"
+                alt="tallrik med pannkakor och sirap"
+                class="recipe-image"
               />
+            </figure>
+            <figure class="recipe-image-wrapper">
               <img
                 src="images/pancake3.jpg"
-                alt="tallrik med pannkakor"
-                class="recipeImage"
+                alt="tallrik med pannkakor och blommor"
+                class="recipe-image"
               />
-            </div>
-          </section>
-        </main>
-      </div>
-    </div>
+            </figure>
+          </div>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
